# MoDeST

./: .gitignore  README.md  pyproject.toml
doc/: TODO
src/modest/: paths.py
src/modest/algorithms/: alignment.py
src/modest/composition/: chain.py
src/modest/datasets/: compoundpiece.py  english.py  german.py  huggingface.py  morphochallenge2010.py  morphynet.py  webcelex.py
src/modest/downloaders/: modest.py  paths.py
src/modest/formats/: celex.py  morphochallenge2010.py  morphynet.py  trivial.py  tsv.py  tsv_wordfrequency.py
src/modest/interfaces/: datasets.py  formative_lemmata.py  kernels.py  morphologies.py  readers.py
src/modest/languages/: catalan.py  czech.py  dutch.py  english.py  finnish.py  french.py  german.py  hungarian.py  italian.py  mongolian.py  polish.py  portuguese.py  russian.py  serbian_croatian_bosnian_montenegrin.py  serbocroatian.py  spanish.py  swedish.py  turkish.py
src/modest/transformations/: chain.py  combine.py  partial.py  precompute.py  sample.py
tst/downloaders/: test_morphynet.py
tst/examples/: english.py
tst/formats/: test_celex.py
