[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "modest_bauwenst"
version = "2026.03.01"
requires-python = ">= 3.9"
authors = [
  {name = "Thomas Bauwens", email = "thomas.bauwens@kuleuven.be"}
]
maintainers = [
  {name = "Thomas Bauwens", email = "thomas.bauwens@kuleuven.be"}
]
description = "MoDeST: a Morphological Decomposition & Segmentation Trove."
readme = "README.md"
license-files = ["LICENSE"]
keywords = ["NLP", "segmentation", "natural language", "decomposition", "morphology", "datasets"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "datasets",
    "bs4",
    "selenium",
    "webdriver_manager",
	"langcodes >= 3.5.0"  # Necessary because Language hashing is not implemented correctly in prior versions.
]

[project.urls]
Source = "https://github.com/bauwenst/MoDeST"
Issues = "https://github.com/bauwenst/MoDeST/issues"

# These are not optional, but if you have these packages as editable install, you don't want to let pip install them again!
[project.optional-dependencies]
all = [
    "tktkt[all]"
]
github = [
]